Solucionar problemas de keyclock