@@ -1,91 +1,103 @@
-package com.Gateway.Gateway.Config;
+package com.Gateway.Gateway.config;
 
+import org.springframework.beans.factory.annotation.Value; // Importado
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.convert.converter.Converter;
-import org.springframework.http.HttpMethod;
-import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.method.configuration.EnableReactiveMethodSecurity;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.security.oauth2.jwt.JwtTimestampValidator; // Importado
+import org.springframework.security.oauth2.jwt.NimbusReactiveJwtDecoder; // Importado
+import org.springframework.security.oauth2.jwt.ReactiveJwtDecoder; // Importado
 import org.springframework.security.oauth2.server.resource.authentication.ReactiveJwtAuthenticationConverter;
 import org.springframework.security.web.server.SecurityWebFilterChain;
-import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
-import org.springframework.beans.factory.annotation.Value;
+import reactor.core.publisher.Flux;
 
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebFluxSecurity
+@EnableReactiveMethodSecurity
 public class SecurityConfig {
 
-    @Value("${seguridad.desactivado:false}")
-    private boolean seguridadDesactivado;
+    // Inyectamos la URL del JWKS desde el application.properties
+    @Value("${spring.security.oauth2.resourceserver.jwt.jwk-set-uri}")
+    private String jwkSetUri;
 
     @Bean
-    public SecurityWebFilterChain securityFilterChain(ServerHttpSecurity http) {
-        if (seguridadDesactivado) {
-            return http.csrf(ServerHttpSecurity.CsrfSpec::disable)
-                    .authorizeExchange(exchange -> exchange.anyExchange().permitAll())
-                    .build();
-        }
+    public SecurityWebFilterChain springSecurityFilterChain(ServerHttpSecurity http) {
         http
-                .csrf(ServerHttpSecurity.CsrfSpec::disable)
-                .authorizeExchange(exchange -> exchange
-                        // Endpoints públicos
-                        .pathMatchers("/api/auth/**", "/api/public/**").permitAll()
-
-                        // ENDPOINTS PARA CLIENTE
-                        .pathMatchers(HttpMethod.POST, "/api/solicitudes/**").hasRole("CLIENTE")
-                        .pathMatchers(HttpMethod.GET, "/api/solicitudes/{numero}/**").hasRole("CLIENTE")
-                        .pathMatchers(HttpMethod.GET, "/api/contenedores/{id}/**").hasRole("CLIENTE")
-
-                        // ENDPOINTS PARA OPERADOR
-                        .pathMatchers("/api/ciudades/**").hasRole("OPERADOR")
-                        .pathMatchers("/api/depositos/**").hasRole("OPERADOR")
-                        .pathMatchers("/api/tarifas/**").hasRole("OPERADOR")
-                        .pathMatchers("/api/camiones/**").hasRole("OPERADOR")
-                        .pathMatchers("/api/contenedores/**").hasRole("OPERADOR")
-                        // .requestMatchers("/api/tramos/asignar/**").hasRole("OPERADOR")
-
-                        // ENDPOINTS PARA TRANSPORTISTA
-                        .pathMatchers(HttpMethod.GET, "/api/tramos/{dominio}").hasRole("TRANSPORTISTA")
-                        .pathMatchers(HttpMethod.PUT, "/api/tramos/{id}/**").hasRole("TRANSPORTISTA")
-
-                        // Cualquier otra petición requiere autenticación
-                        .anyExchange().authenticated()
-                    )
-                    .oauth2ResourceServer(oauth2 -> oauth2
-                        .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter()))
-                    );
+            .authorizeExchange(exchange -> exchange
+                // Endpoints públicos (Swagger, health, login, clientes, y búsqueda)
+                .pathMatchers(
+                    "/",
+                    "/v3/api-docs/**",
+                    "/swagger-ui/**",
+                    "/swagger-ui.html",
+                    "/webjars/**",
+                    "/actuator/health",
+                    "/login",
+                    "/logout",
+                    "/api/clientes/**", // API de Clientes es pública
+                    "/api/solicitudes/ciudades/search" // Endpoint público de búsqueda
+                ).permitAll()
+                // Todas las demás peticiones (ej. /api/solicitudes/**) requieren autenticación
+                .anyExchange().authenticated()
+            )
+            .oauth2Login(Customizer.withDefaults())
+            .oauth2ResourceServer(oauth2 -> oauth2
+                // Spring usará nuestro bean 'jwtDecoder()' personalizado
+                .jwt(jwt -> jwt
+                    .jwtAuthenticationConverter(jwtAuthenticationConverter())
+                )
+            )
+            .csrf(csrf -> csrf.disable());
 
         return http.build();
     }
 
-    private Converter<Jwt, Mono<AbstractAuthenticationToken>> jwtAuthenticationConverter() {
-        ReactiveJwtAuthenticationConverter converter = new ReactiveJwtAuthenticationConverter();
-        converter.setJwtGrantedAuthoritiesConverter(jwt -> {
-            List<String> roles = extractRealmRoles(jwt);
-            List<SimpleGrantedAuthority> authorities = roles.stream()
-                .map(role -> "ROLE_" + role)
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
-            return Flux.fromIterable(authorities);
-        });
-        return converter;
+    /**
+     * NUEVO BEAN: Este es el arreglo para el 401 (versión Reactiva).
+     */
+    @Bean
+    public ReactiveJwtDecoder jwtDecoder() {
+        NimbusReactiveJwtDecoder reactiveJwtDecoder = NimbusReactiveJwtDecoder.withJwkSetUri(jwkSetUri).build();
+        // Validamos solo la fecha de expiración, no el 'issuer'
+        reactiveJwtDecoder.setJwtValidator(new JwtTimestampValidator());
+        return reactiveJwtDecoder;
     }
 
-    @SuppressWarnings("unchecked")
-    private List<String> extractRealmRoles(Jwt jwt) {
-        Map<String, Object> realmAccess = jwt.getClaim("realm_access");
-        if (realmAccess == null || !realmAccess.containsKey("roles")) {
-            return Collections.emptyList();
-        }
-        return (List<String>) realmAccess.get("roles");
+    /**
+     * Conversor de roles (sin cambios)
+     */
+    @Bean
+    public ReactiveJwtAuthenticationConverter jwtAuthenticationConverter() {
+        Converter<Jwt, Collection<GrantedAuthority>> authoritiesConverter = jwt -> {
+            Map<String, Object> realmAccess = (Map<String, Object>) jwt.getClaims().get("realm_access");
+
+            if (realmAccess == null || realmAccess.isEmpty()) {
+                return List.of();
+            }
+
+            Collection<String> roles = (Collection<String>) realmAccess.get("roles");
+
+            return roles.stream()
+                    .map(roleName -> "ROLE_" + roleName.toUpperCase())
+                    .map(SimpleGrantedAuthority::new)
+                    .collect(Collectors.toList());
+        };
+        ReactiveJwtAuthenticationConverter converter = new ReactiveJwtAuthenticationConverter();
+        converter.setJwtGrantedAuthoritiesConverter(jwt -> Flux.fromIterable(authoritiesConverter.convert(jwt)));
+
+        return converter;
     }
 }
